--- a/qb_hand_description/config/default.yaml
+++ b/qb_hand_description/config/default.yaml
@@ -22,7 +22,7 @@ default:
     virtual_mechanism: &virtual_mechanism
       position: "0.013 0 0"
       orientation: "0 0 0"
-    single_synergy: &single_synergy
+    synergy: &synergy
       axis: "0 0 1"  # it is not important though
       dynamics: *dynamics
       limits:
@@ -30,21 +30,19 @@ default:
         upper: 1.0
         effort: *effort
         velocity: *velocity
-    inertial: &phalanx_inertial
-      mass: 0.01
-      origin: "0 0 0"
-      inertia:
-        ixx: 0.000001
-        ixy: 0.0
-        ixz: 0.0
-        iyy: 0.000001
-        iyz: 0.0
-        izz: 0.000001
+    manipulation: &manipulation
+      axis: "0 0 1"  # it is not important though
+      dynamics: *dynamics
+      limits:
+        lower: -1.0
+        upper: 1.0
+        effort: *effort
+        velocity: *velocity
 
   finger:
     knuckle: &knuckle
       mesh: "ph_knuckle"
-      mesh_collision: "ph_knuckle"
+      mesh_collision: "ph_knuckle_collision"
       # 'position' and 'orientation' should be specified each time
       position: "0 0 0"
       orientation: "0 0 0"
@@ -56,11 +54,66 @@ default:
         upper: 0.524
         effort: *effort
         velocity: *velocity
-      inertial: *phalanx_inertial
+      inertial:
+        mass: 0.0095  # 9.5g
+        origin:
+          position: "4.2753603e-04  0.0 -1.4321738e-03"  # y^ less than e-04 from CAD --> 1.6685384e-07
+          orientation: "0 0 0"
+        inertia:
+          ixx: 6.4337303e-07
+          ixy: 0.0  # less than e-09 from CAD --> -6.1071201e-12
+          ixz: -3.9373913e-08
+          iyy: 1.1253771e-06
+          iyz: 0.0  # less than e-09 from CAD --> 1.0214952e-11
+          izz: 7.2336948e-07
+
+    knuckle_thumb_r: &knuckle_thumb_r
+      mesh: "ph_thumb_r"
+      mesh_collision: "ph_thumb_r_collision"
+      # 'position' and 'orientation' should be specified each time
+      position: "0 0 0"
+      orientation: "0 0 0"
+      axis: *axis_abduction
+      mimic_reduction: 2.542
+      dynamics: *dynamics
+      limits:
+        lower: 0.0
+        upper: 1.571
+        effort: *effort
+        velocity: *velocity
+      inertial:
+        mass: 0.0100  # 10.0g
+        origin:
+          position: "1.3071561e-02 -2.7357764e-03 6.4347823e-04"
+          orientation: "0 0 0"
+        inertia:
+          ixx: 3.5865978e-07
+          ixy: 2.0944224e-07
+          ixz: -6.8657569e-08
+          iyy: 1.3885564e-06
+          iyz: 3.2170608e-08
+          izz: 1.3571203e-06
+
+    knuckle_thumb_l: &knuckle_thumb_l
+      << : *knuckle_thumb_r
+      mesh: "ph_thumb_l"
+      mesh_collision: "ph_thumb_l_collision"
+      inertial:
+        mass: 0.0100  # 10.0g
+        origin:
+          position: "1.3071561e-02 2.7346340e-03 6.4090487e-04"
+          orientation: "0 0 0"
+        inertia:
+          ixx: 3.5827953e-07
+          ixy: -2.0934657e-07
+          ixz: -6.8435459e-08
+          iyy: 1.3882698e-06
+          iyz: -3.2001578e-08
+          izz: 1.3570267e-06
 
     medium: &medium
       mesh: "ph_medium"
-      mesh_collision: "ph_medium"
+      mesh_collision: "ph_medium_collision"
       position: "0.017 0 0"
       orientation: "0 0 0"
       axis: *axis_flexion
@@ -72,16 +125,27 @@ default:
         upper: 0.785
         effort: *effort
         velocity: *velocity
-      inertial: *phalanx_inertial
+      inertial:
+        mass: 0.0082  # 8.2g
+        origin:
+          position: "8.7707437e-03 -1.7863138e-03 0.0"  # z^ less than e-04 from CAD --> -2.5774703e-05
+          orientation: "0 0 0"
+        inertia:
+          ixx: 2.2722068e-07
+          ixy: 1.1586053e-08
+          ixz: 0.0  # less than e-09 from CAD --> -5.6391369e-11
+          iyy: 5.5947233e-07
+          iyz: 0.0  # less than e-09 from CAD --> 2.3431511e-11
+          izz: 5.9562195e-07
 
     medium_after_knuckle: &medium_after_knuckle
       << : *medium
-      position: "0 0.009 0"
-      orientation: "1.57 0 1.57"
+      position: "0.009 0 0"
+      orientation: "1.57 0 0"
 
-    small: &small
-      mesh: "ph_small"
-      mesh_collision: "ph_small"
+    short: &short
+      mesh: "ph_short"
+      mesh_collision: "ph_short_collision"
       position: "0.009 0 0"
       orientation: "0 0 0"
       axis: *axis_flexion
@@ -93,21 +157,32 @@ default:
         upper: 0.785
         effort: *effort
         velocity: *velocity
-      inertial: *phalanx_inertial
+      inertial:
+        mass: 0.0063  # 6.3g
+        origin:
+          position: "4.7601567e-03 -1.3786947e-03 0.0"  # z^ less than e-04 from CAD --> -3.0200439e-07
+          orientation: "0 0 0"
+        inertia:
+          ixx: 1.8024201e-07
+          ixy: 5.7567980e-09
+          ixz: 0.0  # less than e-09 from CAD --> -1.8174442e-12
+          iyy: 2.3516266e-07
+          iyz: 0.0  # less than e-09 from CAD --> -1.0435060e-11
+          izz: 2.6915040e-07
 
-    small_after_knuckle: &small_after_knuckle
-      << : *small
-      position: "0 0.009 0"
-      orientation: "1.57 0 1.57"
+    short_after_knuckle: &short_after_knuckle
+      << : *short
+      position: "0.009 0 0"
+      orientation: "1.57 0 0"
 
-    small_after_medium: &small_after_medium
-      << : *small
+    short_after_medium: &short_after_medium
+      << : *short
       position: "0.017 0 0"
       orientation: "0 0 0"
 
     distal: &distal
       mesh: "ph_distal"
-      mesh_collision: "ph_distal"
+      mesh_collision: "ph_distal_collision"
       position: "0.009 0 0"
       orientation: "0 0 0"
       axis: *axis_flexion
@@ -119,23 +194,35 @@ default:
         upper: 0.785
         effort: *effort
         velocity: *velocity
-      inertial: *phalanx_inertial
-
+      inertial:
+        mass: 0.0090  # 9.0g
+        origin:
+          position: "8.8025467e-03 -1.7219289e-03 0.0"  # z^ less than e-04 from CAD --> -2.1350175e-07
+          orientation: "0 0 0"
+        inertia:
+          ixx: 2.6586142e-07
+          ixy: 1.2416847e-08
+          ixz: 0.0  # less than e-09 from CAD --> -8.6698823e-12
+          iyy: 5.9935767e-07
+          iyz: 0.0  # less than e-09 from CAD --> -9.3832346e-12
+          izz: 6.6781963e-07
 
 qbhand_right:
   base:
     mesh: "flange_iso_04"
     mesh_collision: "flange_iso_04"
     inertial:
-      mass: 0.150
-      origin: "0 0 0.0015"
+      mass: 0.205
+      origin:
+        position: "0.0 7.8738498e-04 1.5878899e-02"  # x^ less than e-04 from CAD --> -1.9242016e-07
+        orientation: "0 0 0"
       inertia:
-        ixx: 0.00006
-        ixy: 0
-        ixz: 0
-        iyy: 0.00006
-        iyz: 0
-        izz: 0.00009
+        ixx: 1.2506929e-04
+        ixy: 0.0  # approx
+        ixz: 0.0  # approx
+        iyy: 1.3387790e-04
+        iyz: 0.0  # approx
+        izz: 1.9218394e-04
 
   palm:
     mesh: "palm_pinch_r"
@@ -143,9 +230,11 @@ qbhand_right:
     position: "-0.0045 0.0145 0.144"
     orientation: "1.57 0 0"
     inertial:
-      mass: 0.360
-      origin: "0.0 0.02 0.05"
-      inertia:
+      mass: 0.450
+      origin:
+        position: "0.0030 -0.0449 0.0135"
+        orientation: "0 0 0"
+      inertia:  # all approx
         ixx: 0.00045
         ixy: 0.0
         ixz: 0.0
@@ -153,66 +242,59 @@ qbhand_right:
         iyz: 0.0
         izz: 0.00025
 
-  synergy: *single_synergy
+  synergy: *synergy
+  manipulation: *manipulation
 
   # all fingers have the same base structure and only few things change among them (e.g. the pose of the knuckle)
   thumb:
     knuckle:
-      << : *knuckle
-      mesh: "ph_thumb_r"
-      mesh_collision: "ph_thumb_r"
-      position: "-0.0435 -0.0435 -0.002"
-      orientation: "-1.57 3.14 0"
-      mimic_reduction: 2.542
-      limits:
-        lower: 0.0
-        upper: 1.571
-        effort: *effort
-        velocity: *velocity
+      << : *knuckle_thumb_r
+      position: "-0.044 -0.0465 -0.002"
+      orientation: "-1.57 3.14 0.0"
     proximal:
-      << : *small
-      position: "0.0255 -0.004 -0.0025"
-      orientation: "-1.15 0.0 0.0"
+      << : *short
+      position: "0.0255 -0.0038 -0.00012"
+      orientation: "-1.1415 0.0 0.0"
     distal: *distal
 
   index:
     knuckle:
       << : *knuckle
       position: "-0.02 -0.007 0.014"
-      orientation: "0 0 0"
+      orientation: "0 0 1.57"
       mimic_reduction: -0.2
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   middle:
     knuckle:
       << : *knuckle
       position: "0 0 0.014"
-      orientation: "0 0 0"
+      orientation: "0 0 1.57"
       mimic_reduction: 0.0
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   ring:
     knuckle:
       << : *knuckle
       position: "0.02 -0.007 0.014"
-      orientation: "0 0 0"
+      orientation: "0 0 1.57"
       mimic_reduction: 0.2
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   little:
     knuckle:
       << : *knuckle
       position: "0.04 -0.012 0.014"
-      orientation: "0 0 0"
+      orientation: "0 0 1.57"
       mimic_reduction: 0.4
-    proximal: *small_after_knuckle
-    middle: *small
+    proximal: *short_after_knuckle
+    middle: *short
     distal: *distal
 
 
@@ -221,15 +303,17 @@ qbhand_left:
     mesh: "flange_iso_04"
     mesh_collision: "flange_iso_04"
     inertial:
-      mass: 0.150
-      origin: "0 0 0.0015"
+      mass: 0.205
+      origin:
+        position: "0.0 7.8738498e-04 1.5878899e-02"  # x^ less than e-04 from CAD --> -1.9242016e-07
+        orientation: "0 0 0"
       inertia:
-        ixx: 0.00006
-        ixy: 0
-        ixz: 0
-        iyy: 0.00006
-        iyz: 0
-        izz: 0.00009
+        ixx: 1.2506929e-04
+        ixy: 0.0  # approx
+        ixz: 0.0  # approx
+        iyy: 1.3387790e-04
+        iyz: 0.0  # approx
+        izz: 1.9218394e-04
 
   palm:
     mesh: "palm_pinch_l"
@@ -237,9 +321,11 @@ qbhand_left:
     position: "0.0045 0.0145 0.144"
     orientation: "1.57 0 3.14"
     inertial:
-      mass: 0.360
-      origin: "0.0 0.02 0.05"
-      inertia:
+      mass: 0.450
+      origin:
+        position: "0.0030 -0.0449 -0.0135"
+        orientation: "0 0 0"
+      inertia:  # all approx
         ixx: 0.00045
         ixy: 0.0
         ixz: 0.0
@@ -247,64 +333,57 @@ qbhand_left:
         iyz: 0.0
         izz: 0.00025
 
-  synergy: *single_synergy
+  synergy: *synergy
+  manipulation: *manipulation
 
   # all fingers have the same base structure and only few things change among them (e.g. the pose of the knuckle)
   thumb:
     knuckle:
-      << : *knuckle
-      mesh: "ph_thumb_l"
-      mesh_collision: "ph_thumb_l"
-      position: "-0.0435 -0.0435 -0.002"
-      orientation: "1.57 3.14 0"
-      mimic_reduction: 2.542
-      limits:
-        lower: 0.0
-        upper: 1.571
-        effort: *effort
-        velocity: *velocity
+      << : *knuckle_thumb_l
+      position: "-0.044 -0.0465 0.002"
+      orientation: "-1.57 3.14 0.0"
     proximal:
-      << : *small
-      position: "0.0255 -0.004 0.0025"
-      orientation: "1.15 0.0 0.0"
+      << : *short
+      position: "0.0255 0.0038 -0.00012"
+      orientation: "-2.0 0.0 0.0"
     distal: *distal
 
   index:
     knuckle:
       << : *knuckle
       position: "-0.02 -0.007 -0.014"
-      orientation: "0 3.14 0"
+      orientation: "0 3.14 -1.57"
       mimic_reduction: 0.2
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   middle:
     knuckle:
       << : *knuckle
       position: "0 0 -0.014"
-      orientation: "0 3.14 0"
+      orientation: "0 3.14 -1.57"
       mimic_reduction: 0.0
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   ring:
     knuckle:
       << : *knuckle
       position: "0.02 -0.007 -0.014"
-      orientation: "0 3.14 0"
+      orientation: "0 3.14 -1.57"
       mimic_reduction: -0.2
     proximal: *medium_after_knuckle
-    middle: *small_after_medium
+    middle: *short_after_medium
     distal: *distal
 
   little:
     knuckle:
       << : *knuckle
       position: "0.04 -0.012 -0.014"
-      orientation: "0 3.14 0"
+      orientation: "0 3.14 -1.57"
       mimic_reduction: -0.4
-    proximal: *small_after_knuckle
-    middle: *small
+    proximal: *short_after_knuckle
+    middle: *short
     distal: *distal
