--- a/qb_hand/package.xml
+++ b/qb_hand/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>qb_hand</name>
-  <version>2.1.2</version>
+  <version>2.2.0</version>
   <description>
     This package contains the ROS interface for qbrobotics® qbhand device.
   </description>
@@ -16,6 +16,7 @@
 
   <exec_depend>qb_hand_control</exec_depend>
   <exec_depend>qb_hand_description</exec_depend>
+  <exec_depend>qb_hand_gazebo</exec_depend>
   <exec_depend>qb_hand_hardware_interface</exec_depend>
 
   <export>
