--- a/qb_hand_control/CMakeLists.txt
+++ b/qb_hand_control/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
-project(qb_hand_control VERSION 2.1.2 LANGUAGES CXX)
+project(qb_hand_control VERSION 2.2.0 LANGUAGES CXX)
 
 # Dependency Settings
 find_package(catkin REQUIRED)
@@ -7,6 +7,13 @@ find_package(catkin REQUIRED)
 catkin_package()
 
 # Installation
+
+install(
+  DIRECTORY
+    config/
+  DESTINATION
+    ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
 install(
   DIRECTORY
     launch/
