--- a/qb_hand_description/CMakeLists.txt
+++ b/qb_hand_description/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
-project(qb_hand_description VERSION 2.1.2 LANGUAGES CXX)
+project(qb_hand_description VERSION 2.2.0 LANGUAGES CXX)
 
 # Dependency Settings
 find_package(catkin REQUIRED)
@@ -9,7 +9,35 @@ catkin_package()
 # Installation
 install(
   DIRECTORY
+    config/
+  DESTINATION
+    ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
+
+install(
+  DIRECTORY
     launch/
   DESTINATION
     ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
+
+install(
+  DIRECTORY
+    meshes/
+  DESTINATION
+    ${CATKIN_PACKAGE_SHARE_DESTINATION}/meshes
+)
+
+install(
+  DIRECTORY
+    rviz/
+  DESTINATION
+    ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz
+)
+
+install(
+  DIRECTORY
+    urdf/
+  DESTINATION
+    ${CATKIN_PACKAGE_SHARE_DESTINATION}/urdf
 )
