--- a/qb_hand_gazebo/package.xml
+++ b/qb_hand_gazebo/package.xml
@@ -1,8 +1,8 @@
 <package format="2">
-  <name>qb_hand_hardware_interface</name>
-  <version>2.2.0</version>
+  <name>qb_hand_gazebo</name>
+  <version>2.1.3</version>
   <description>
-    This package contains the hardware interface for qbrobotics® qbhand device.
+    This package contains the Gazebo ROS control plugins for qbrobotics® SoftHand device.
   </description>
   <author>qbrobotics®</author>
   <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
@@ -10,18 +10,17 @@
 
   <url type="bugtracker">https://bitbucket.org/qbrobotics/qbhand-ros/issues</url>
   <url type="repository">https://bitbucket.org/qbrobotics/qbhand-ros</url>
-  <url type="website">http://wiki.ros.org/qb_hand_hardware_interface</url>
+  <url type="website">http://wiki.ros.org/qb_hand_gazebo</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-
   <depend>roscpp</depend>
-  <depend>control_toolbox</depend>
-  <depend>hardware_interface</depend>
-  <depend>transmission_interface</depend>
+  <depend>gazebo_ros_control</depend>
+  <depend>controller_manager</depend>
+  <depend>qb_device_gazebo</depend>
   <depend>qb_device_hardware_interface</depend>
 
   <export>
-    <hardware_interface plugin="${prefix}/plugin.xml"/>
+    <gazebo_ros_control plugin="${prefix}/plugin.xml"/>
   </export>
 
   <!--TODO: <test_depend>gtest</test_depend>-->
