--- a/qb_hand_hardware_interface/plugin.xml
+++ b/qb_hand_hardware_interface/plugin.xml
@@ -1,7 +1,14 @@
-<library path="libqb_hand_hardware_interface">
-  <class name="qb_hand_hardware_interface/qbHandHW" type="qb_hand_hardware_interface::qbHandHW" base_class_type="hardware_interface::RobotHW">
-    <description>
-      A type of RobotHW
-    </description>
-  </class>
-</library>
+<class_libraries>
+  <library path="libqb_hand_hardware_interface">
+    <class name="qb_hand_hardware_interface/qbHandHW" type="qb_hand_hardware_interface::qbHandHW" base_class_type="hardware_interface::RobotHW">
+      <description>
+        A type of RobotHW
+      </description>
+    </class>
+    <class name="qb_hand_hardware_interface/qbHand2MotorsHW" type="qb_hand_hardware_interface::qbHand2MotorsHW" base_class_type="hardware_interface::RobotHW">
+      <description>
+        A type of RobotHW
+      </description>
+    </class>
+  </library>
+</class_libraries>
