--- a/qb_hand_control/config/qbhand2m_waypoints.yaml
+++ b/qb_hand_control/config/qbhand2m_waypoints.yaml
@@ -16,12 +16,48 @@ waypoints:
   -
     time: [2.0]
     joint_positions:
-      qbhand2m: [0.0, 0.0]
+      qbhand2m1: [0.0, 0.0]
   -
-    time: [4.0, 4.2]
+    time: [4.0]
     joint_positions:
-      qbhand2m: [0.8, -0.5]
+      qbhand2m1: [0.48, 1.0]
   -
-    time: [6.0, 6.2]
+    time: [8.0]
     joint_positions:
-      qbhand2m: [0.8, 0.5]
+      qbhand2m1: [0.48, 1.0]
+  -
+    time: [9.0]
+    joint_positions:
+      qbhand2m1: [0.48, 0]
+  -
+    time: [10.0]
+    joint_positions:
+      qbhand2m1: [0.0, 0]
+  -
+    time: [12.0]
+    joint_positions:
+      qbhand2m1: [1, 0]
+  -
+    time: [16.0]
+    joint_positions:
+      qbhand2m1: [1, 0]
+  -
+    time: [17.0]
+    joint_positions:
+      qbhand2m1: [0, 0]
+  -
+    time: [19.0]
+    joint_positions:
+      qbhand2m1: [0.5, -0.4]
+  -
+    time: [23.0]
+    joint_positions:
+      qbhand2m1: [0.5, -0.4]
+  -
+    time: [24.0]
+    joint_positions:
+      qbhand2m1: [0.5, 0]
+  -
+    time: [25.0]
+    joint_positions:
+      qbhand2m1: [0.0, 0]
